--- a/package.json
+++ b/package.json
@@ -6,21 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "seed": "npx tsx ./api/src/db/seed/index.ts"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.2.12",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
     "@neondatabase/serverless": "^0.10.1",
+    "@tanstack/react-table": "^8.20.5",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.14",
     "drizzle-kit": "^0.27.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
